@@ -5,7 +5,7 @@ import java.util.ArrayList;
 public class Main {
     public static void main(String[] args) {
 
-        Array arr = new Array(20);
+        Array<Integer> arr = new Array<>();
         for (int i = 0; i < 10; i++) {
             arr.addLast(i);
         }
@@ -16,17 +16,17 @@ public class Main {
         arr.addFirst(-1);
         System.out.println(arr);
 
-        arr.remove(0);
-        System.out.println(arr);
-
-        arr.removeElement(4);
-        System.out.println(arr);
-
-        arr.removeLast();
-        System.out.println(arr);
-
-        arr.removeFirst();
-        System.out.println(arr);
+        // arr.remove(0);
+        // System.out.println(arr);
+        //
+        // arr.removeElement(4);
+        // System.out.println(arr);
+        //
+        // arr.removeLast();
+        // System.out.println(arr);
+        //
+        // arr.removeFirst();
+        // System.out.println(arr);
 
 
 
